--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap-icons": "^1.0.0-alpha4"
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "bootstrap-icons": "^1.0.0-alpha4",
+    "vue": "^2.6.11"
   }
 }
